# Cpp-in-Embedded-Systems

./: .gitignore  README.md
Chapter01/: README.md  bloat.cpp  compile_time_const.c  compile_time_const.cpp  compile_time_square_func.cpp  exceptions.cpp  ring_buffer.c  ring_buffer.cpp  ring_buffer_compile_time_generic.c  ring_buffer_type_erasure.c  rtti.cpp  undefined_behavior.cpp
Chapter02/: README.md  instrument_functions.cpp  new_deleted.cpp  terminate_handler.cpp  vector_dyn_mem.cpp  vector_dyn_mem_reserve.cpp  vector_pmr.cpp
Chapter03/: google_test_example.cpp  out_of_bound.cpp  uninitialized_value.cpp
Chapter04/: Dockerfile
Chapter04/bare/: .clang-tidy  CMakeLists.txt
Chapter04/bare/.cache/clangd/index/: cmsis_compiler.h.611198E83C7B0A01.idx  cmsis_gcc.h.48E9F2D44F9966AD.idx  cmsis_version.h.79510D0BF0165703.idx  core_cm0.h.E150B8A75C2F4808.idx  hal.hpp.6DADBD8849084F23.idx  main.cpp.DADEEDC6E9425266.idx  startup_stm32f072xb.s.565A760D52FA3145.idx  stm32_hal_legacy.h.986CD621D5E0A144.idx  stm32f072xb.h.8DE58C49962EBF3B.idx  stm32f0xx.h.13593AF449193080.idx  stm32f0xx_hal.c.A8E08166C698589E.idx  stm32f0xx_hal.h.29141E1E17F5DDD2.idx  stm32f0xx_hal_adc.h.C8E4D5BCF8AB7297.idx  stm32f0xx_hal_adc_ex.h.366CF43C7D8F92F9.idx  stm32f0xx_hal_conf.h.1FA5233ADCBAA7D3.idx  stm32f0xx_hal_cortex.c.C642C9874B48969F.idx  stm32f0xx_hal_cortex.h.038E00A3659BE141.idx  stm32f0xx_hal_crc.h.B6F010A1E999AEEC.idx  stm32f0xx_hal_crc_ex.h.447759828DB90A4D.idx  stm32f0xx_hal_dac.h.1D4EE9EF1CD77BCC.idx  stm32f0xx_hal_dac_ex.h.F63393F50EE20A86.idx  stm32f0xx_hal_def.h.59DE17C8E9F93E9A.idx  stm32f0xx_hal_dma.h.5DF5F8B470456E12.idx  stm32f0xx_hal_dma_ex.h.901089DDBA1455F1.idx  stm32f0xx_hal_exti.h.69FA9A35B8EF0C4A.idx  stm32f0xx_hal_flash.h.74590DEA5A319421.idx  stm32f0xx_hal_flash_ex.h.29B2A70B428D7A80.idx  stm32f0xx_hal_gpio.c.EA95D9114A36755B.idx  stm32f0xx_hal_gpio.h.EF02621E97568558.idx  stm32f0xx_hal_gpio_ex.h.3020C28D90409D73.idx  stm32f0xx_hal_i2c.h.811225C41A88D4B1.idx  stm32f0xx_hal_i2c_ex.h.F4C04AAA5BBAF768.idx  stm32f0xx_hal_iwdg.h.36D00CF79DE068DF.idx  stm32f0xx_hal_msp.c.3FD0D674673BA4B1.idx  stm32f0xx_hal_pwr.h.D62DE219B265C4E2.idx  stm32f0xx_hal_pwr_ex.h.B43DBF81924BA811.idx  stm32f0xx_hal_rcc.c.E5122CCE8A5DF132.idx  stm32f0xx_hal_rcc.h.C1BCD56A38060B4A.idx  stm32f0xx_hal_rcc_ex.h.920B77BFDD857D36.idx  stm32f0xx_hal_tim.h.8A51782594050848.idx  (+13 more)
Chapter04/bare/app/src/: main.cpp
Chapter04/bare/hal/inc/: hal.hpp
Chapter04/bare/hal/uart/inc/: uart.hpp  uart_stm32.hpp
Chapter04/bare/hal/uart/src/: uart_stm32.cpp
Chapter04/bare/renode_scripts/: stm32f072.resc  stm32f072_debug.resc
Chapter05/: class_basics.cpp
Chapter05/gsm_lib/: CMakeLists.txt
Chapter05/gsm_lib/app/src/: main.cpp
Chapter05/gsm_lib/hal/inc/: hal.hpp
Chapter05/gsm_lib/platform/src/: stm32f0xx_hal_msp.c
Chapter06/: copy_if.cpp  function_overloading.cpp  lvalue_refs.cpp  main  priority_queue_adaptor.cpp  rvalue.cpp  rvalue_refs.cpp  sort.cpp
Chapter07/error_handling/: CMakeLists.txt
Chapter07/error_handling/app/src/: main.cpp  main_assert.cpp  main_exceptions.cpp  main_expected.cpp  main_optional.cpp
Chapter07/error_handling/cstdlib_support/: nosys_stubs.c  retarget.cpp
Chapter07/error_handling/renode_scripts/: stm32f072.resc
Chapter08/: template_function.cpp  template_function_point.cpp  template_specialization.cpp  tmpt_concepts.cpp  tmpt_crtp.cpp  tmpt_enable_if.cpp
Chapter09/type_safety/: .clang-tidy  CMakeLists.txt
Chapter09/type_safety/app/src/: main_reinterpret_cast.cpp  main_strong_types.cpp  main_type_punning.cpp  main_usual_arithmetic_conversion.cpp
Chapter09/type_safety/cstdlib_support/: retarget.cpp
Chapter09/type_safety/hal/inc/: hal.hpp
Chapter10/lambdas/: .clang-tidy  CMakeLists.txt
Chapter10/lambdas/app/src/: main_lambda_basics.cpp  main_std_function_command_pattern.cpp
Chapter10/lambdas/cstdlib_support/: retarget.hpp
Chapter10/lambdas/renode_scripts/: stm32f072_debug.resc
Chapter11/compile_time/: CMakeLists.txt
Chapter11/compile_time/app/src/: main_constexpr_mac_address.cpp  main_lookup_table.cpp
Chapter11/compile_time/renode_scripts/: stm32f072.resc
Chapter11/signal_generator/: CMakeLists.txt  main.cpp
Chapter12/cpp_hal/: CMakeLists.txt
Chapter12/cpp_hal/app/src/: main_basic_reg.cpp  (+2 more)
Chapter13/lfs_raii/: CMakeLists.txt
Chapter13/uart_c_hal_wrapper/: CMakeLists.txt
Chapter13/uart_c_hal_wrapper/renode_scripts/: stm32f072_debug.resc
Chapter14/sequencer/: CMakeLists.txt
Chapter15/observer/: CMakeLists.txt
Chapter16/fsm/: CMakeLists.txt
Chapter16/fsm/platform/: STM32F072C8Tx_FLASH.ld
Chapter16/fsm/renode_scripts/: stm32f072.resc
Chapter17/cib/: .clang-tidy  CMakeLists.txt
Chapter17/cib/renode_scripts/: stm32f0.repl
Chapter17/fsm/: CMakeLists.txt
Chapter18/: accelerometer_interface.cpp  tap_detection_algo.cpp
Chapter18/cib/: .clang-format
(+43 files in other folders)
